better fix for qr icon alignment

--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -113,7 +113,7 @@
 #send {
   .destination-input {
     input, button {
-      height: 34px;
+      // height: 34px;
     }
     input {
       @extend .brdrn;
